retool/retool_apps-v1_Deployment_retool-code-executor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: retool
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: retool-code-executor
    helm.sh/chart: retool-6.10.0
    retoolService: retool-code-executor
    telemetry.retool.com/service-name: code-executor
  name: retool-code-executor
  namespace: retool
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      retoolService: retool-code-executor
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: retool
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: retool-code-executor
        helm.sh/chart: retool-6.10.0
        retoolService: retool-code-executor
        telemetry.retool.com/service-name: code-executor
    spec:
      containers:
      - env:
        - name: DEPLOYMENT_TEMPLATE_TYPE
          value: k8s-helm
        - name: DEPLOYMENT_TEMPLATE_VERSION
          value: 6.10.0
        - name: NODE_ENV
          value: production
        - name: NODE_OPTIONS
          value: --max_old_space_size=1024
        - name: DEFAULT_GROUP_FOR_DOMAINS
          value: poketwo.net -> all-users
        image: tryretool/code-executor-service:3.334.4-stable
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/checkHealth
            port: 3004
          initialDelaySeconds: 30
          timeoutSeconds: 10
        name: code-executor
        ports:
        - containerPort: 3004
          name: http-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /api/checkHealth
            port: 3004
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 5
          timeoutSeconds: 10
        resources:
          limits:
            cpu: 2000m
            memory: 2048Mi
          requests:
            cpu: 1000m
            memory: 1024Mi
        securityContext:
          privileged: true
      nodeSelector:
        kubernetes.io/arch: amd64
      serviceAccountName: retool
      tolerations: []
