retool/retool_apps-v1_Deployment_retool-jobs-runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: retool
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: retool-jobs-runner
    helm.sh/chart: retool-6.10.0
    telemetry.retool.com/service-name: jobs-runner
  name: retool-jobs-runner
  namespace: retool
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: retool
      app.kubernetes.io/name: retool-jobs-runner
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: retool
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: retool-jobs-runner
        helm.sh/chart: retool-6.10.0
        telemetry.retool.com/service-name: jobs-runner
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - retool
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - bash
        - -c
        - chmod -R +x ./docker_scripts; sync; ./docker_scripts/wait-for-it.sh -t 0
          "postgres-rw":"5432"; ./docker_scripts/start_api.sh
        image: tryretool/backend:3.334.4-stable
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/checkJobsRunnerHealth
            port: 3003
          initialDelaySeconds: 120
          periodSeconds: 30
          timeoutSeconds: 3
        name: jobs-runner
        readinessProbe:
          httpGet:
            path: /api/checkJobsRunnerHealth
            port: 3003
          initialDelaySeconds: 120
          periodSeconds: 30
          timeoutSeconds: 3
        resources:
          limits:
            cpu: 2000m
            memory: 4096Mi
          requests:
            cpu: 1000m
            memory: 2048Mi
      nodeSelector:
        kubernetes.io/arch: amd64
      serviceAccountName: retool
      tolerations: []
