retool/retool_apps-v1_Deployment_retool-workflow-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: retool
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: retool-workflow-worker
    helm.sh/chart: retool-6.10.0
    retoolService: retool-workflow-worker
    telemetry.retool.com/service-name: workflow-worker
  name: retool-workflow-worker
  namespace: retool
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      retoolService: retool-workflow-worker
  template:
    metadata:
      annotations:
        prometheus.io/job: retool-workflow-worker
        prometheus.io/port: '9090'
        prometheus.io/scrape: 'true'
      labels:
        app.kubernetes.io/instance: retool
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: retool-workflow-worker
        helm.sh/chart: retool-6.10.0
        retoolService: retool-workflow-worker
        telemetry.retool.com/service-name: workflow-worker
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - retool
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - bash
        - -c
        - chmod -R +x ./docker_scripts; sync; ./docker_scripts/wait-for-it.sh -t 0
          "postgres-rw":"5432"; ./docker_scripts/start_api.sh
        image: tryretool/backend:3.334.4-stable
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/checkHealth
            port: 3005
          initialDelaySeconds: 30
          timeoutSeconds: 10
        name: workflow-worker
        ports:
        - containerPort: 3005
          name: http-server
          protocol: TCP
        - containerPort: 9090
          name: http-metrics
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /api/checkHealth
            port: 3005
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 5
          timeoutSeconds: 10
        resources:
          limits:
            cpu: 2000m
            memory: 8192Mi
          requests:
            cpu: 1000m
            memory: 2048Mi
      nodeSelector:
        kubernetes.io/arch: amd64
      serviceAccountName: retool
      tolerations: []
