retool/retool_apps-v1_Deployment_retool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: retool
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: retool
    helm.sh/chart: retool-6.10.0
  name: retool
  namespace: retool
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: retool
      app.kubernetes.io/name: retool
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: retool
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: retool
        helm.sh/chart: retool-6.10.0
        telemetry.retool.com/service-name: main-backend
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - retool
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - bash
        - -c
        - chmod -R +x ./docker_scripts; sync; ./docker_scripts/wait-for-it.sh -t 0
          "postgres-rw":"5432"; ./docker_scripts/start_api.sh
        image: tryretool/backend:3.334.4-stable
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - sleep
              - '30'
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/checkHealth
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 10
        name: main-backend
        ports:
        - containerPort: 3000
          name: http-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /api/checkHealth
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 5
          timeoutSeconds: 10
        resources:
          limits:
            cpu: 4096m
            memory: 8192Mi
          requests:
            cpu: 2048m
            memory: 4096Mi
      nodeSelector:
        kubernetes.io/arch: amd64
      serviceAccountName: retool
      tolerations: []
