retool/retool_v1_Service_retool-code-executor.yaml
apiVersion: v1
kind: Service
metadata:
  name: retool-code-executor
  namespace: retool
spec:
  ports:
  - name: http-server
    port: 80
    protocol: TCP
    targetPort: 3004
  selector:
    retoolService: retool-code-executor
