retool/retool_v1_Service_retool-workflow-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: retool-workflow-worker
  namespace: retool
spec:
  ports:
  - name: http-server
    port: 3005
    protocol: TCP
    targetPort: 3005
  - name: http-metrics
    port: 9090
    protocol: TCP
    targetPort: http-metrics
  selector:
    retoolService: retool-workflow-worker
