retool/retool_v1_Service_retool.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: retool-6.10.0
  name: retool
  namespace: retool
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: retool
    app.kubernetes.io/name: retool
  type: ClusterIP
